// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle adminCreateUser bad data 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "testuser+joe@anyupp.com",
  "id": "GENERATED_USERNAME",
  "name": "Test Elek",
  "phone": "+123456789",
  "profileImage": undefined,
  "updatedAt": Any<String>,
}
`;

exports[`Handle adminCreateUser unknown error 1`] = `[Error: UNKNOWN ADMINCREATEUSER ERROR]`;

exports[`Handle crudSdk.CreateAdminUser error 1`] = `"dynamodb PUT ERROR"`;

exports[`Handle listUser returns bad data 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "testuser+joe@anyupp.com",
  "id": "GENERATED_USERNAME",
  "name": "Test Elek",
  "phone": "+123456789",
  "profileImage": undefined,
  "updatedAt": Any<String>,
}
`;

exports[`Handle listUser unknown error 1`] = `[Error: UNKNOWN LISTUSERS ERROR]`;

exports[`Handle multiple users found error 1`] = `
"{
  \\"code\\": \\"DatabaseError\\",
  \\"message\\": \\"Something bad happened, more users found with the provided data\\"
}"
`;

exports[`Handle the good case: CreateAdminUser parameters 1`] = `
Object {
  "Item": Object {
    "createdAt": Any<String>,
    "email": "testuser+joe@anyupp.com",
    "id": "GENERATED_USERNAME",
    "name": "Test Elek",
    "phone": "+123456789",
    "profileImage": undefined,
    "updatedAt": Any<String>,
  },
  "TableName": "ADMIN_USER_TABLE",
}
`;

exports[`Handle the good case: RESULT 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "testuser+joe@anyupp.com",
  "id": "GENERATED_USERNAME",
  "name": "Test Elek",
  "phone": "+123456789",
  "profileImage": undefined,
  "updatedAt": Any<String>,
}
`;

exports[`Handle the good case: adminCreateUser parameters 1`] = `
Array [
  Object {
    "DesiredDeliveryMediums": Array [
      "EMAIL",
    ],
    "UserAttributes": Array [
      Object {
        "Name": "email",
        "Value": "testuser+joe@anyupp.com",
      },
      Object {
        "Name": "email_verified",
        "Value": "true",
      },
      Object {
        "Name": "phone_number_verified",
        "Value": "true",
      },
      Object {
        "Name": "phone_number",
        "Value": "+123456789",
      },
      Object {
        "Name": "name",
        "Value": "Test Elek",
      },
    ],
    "UserPoolId": "USER_POOL_ID",
    "Username": "GENERATED_USERNAME",
  },
]
`;

exports[`Handle the good case: listUsers parameters 1`] = `
Array [
  Object {
    "AttributesToGet": Array [
      "email",
      "phone_number",
    ],
    "Filter": "email = \\"testuser+joe@anyupp.com\\"",
    "Limit": 2,
    "UserPoolId": "USER_POOL_ID",
  },
]
`;

exports[`Handle user already exists error 1`] = `
"{
  \\"code\\": \\"UserAlreadyExists\\",
  \\"message\\": \\"User already exists\\"
}"
`;
